k8s/load-balancer-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: user-manager-app-service-lb
spec:
  selector:
    app: user-manager-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
