k8s/mysql.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-manager-app-mysql-service
  labels:
    app: user-manager-app
spec:
  ports:
    - port: 3306
  selector:
    app: user-manager-app
    tier: mysql
  clusterIP: None

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-manager-app-mysql
  labels:
    app: user-manager-app
spec:
  selector:
    matchLabels:
      app: user-manager-app
      tier: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: user-manager-app
        tier: mysql
    spec:
      containers:
        - image: mysql:5.6
          name: mysql
          ports:
            - containerPort: 3306
              name: mysql
          volumeMounts:
            - name: mysql-persistent-storage
              mountPath: /var/lib/mysql
      volumes:
        - name: mysql-persistent-storage
          persistentVolumeClaim:
            claimName: mysql-pv-claim
