k8s/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: user-manager-app-ingress
spec:
  backend:
    serviceName: user-manager-app-service-np
    servicePort: 8080
